--- a/index.html
+++ b/index.html
@@ -2,27 +2,28 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>西川チェーン 飯田ふとん店 口コミクーポン</title>
+<title>西川チェーン 飯田ふとん店｜口コミで5%OFF</title>
 <style>
-body{font-family:sans-serif;text-align:center;margin:0;padding:40px;}
-.container{max-width:600px;margin:auto;border:2px solid #000;padding:20px;}
-h1{font-size:2em;margin:0.2em 0;} h2{font-size:1.4em;margin:0.4em 0;}
-.instructions{font-size:1.1em;text-align:left;margin-top:1em;line-height:1.6}
+body{margin:0;font-family:"Hiragino Kaku Gothic ProN",sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;background:#fff;}
+.card{border:8px solid #E60012;padding:24px 32px;max-width:420px;text-align:center;}
+h1{background:#E60012;color:#fff;margin:0 0 16px;padding:8px 0;font-size:2em;line-height:1.2;}
+h2{font-size:1.4em;margin:8px 0;line-height:1.3;}
+.qr{width:240px;height:240px;margin:16px auto;}
+ol{margin:0;padding-left:1.1em;text-align:left;font-size:1.1em;line-height:1.6;}
+footer{margin-top:16px;font-size:.9em;}
 </style>
 </head>
 <body>
-<div class="container">
-<h1>西川チェーン 飯田ふとん店</h1>
-<img src="https://chart.googleapis.com/chart?chs=400x400&cht=qr&chl=https%3A%2F%2Fmaps.app.goo.gl%2FetmAzxdmmcTBYzkA8%3Fg_st%3Dipc"
-     width="300" height="300" alt="QRコード">
-<h2>Google口コミ投稿で<br>当日から使える5%OFFクーポン</h2>
-<div class="instructions">
-<ol>
-<li>QRコードを読み取る</li>
-<li>Googleでレビューを書く</li>
-<li>レジで画面提示し5%OFF</li>
-</ol>
-</div>
+<div class="card">
+  <h1>西川チェーン<br>飯田ふとん店</h1>
+  <img src="qr_google_map.png" class="qr" alt="店舗口コミ用QRコード">
+  <h2>今すぐ口コミを書いて<br><strong>当日5%OFF!</strong></h2>
+  <ol>
+    <li>QRを読み取り Googleでレビュー投稿</li>
+    <li>投稿画面をレジで提示</li>
+    <li>その場で<strong>5%割引</strong></li>
+  </ol>
+  <footer>※クーポンはお買上当日のみ有効です</footer>
 </div>
 </body>
 </html>
