--- a/index.html
+++ b/index.html
@@ -1,29 +1,22 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-<meta charset="UTF-8">
-<title>西川チェーン 飯田ふとん店｜口コミで5%OFF</title>
+<!doctype html><html lang="ja"><meta charset="utf-8">
+<title>飯田ふとん店5%OFF</title>
 <style>
-body{margin:0;font-family:"Hiragino Kaku Gothic ProN",sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;background:#fff;}
-.card{border:8px solid #E60012;padding:24px 32px;max-width:420px;text-align:center;}
-h1{background:#E60012;color:#fff;margin:0 0 16px;padding:8px 0;font-size:2em;line-height:1.2;}
-h2{font-size:1.4em;margin:8px 0;line-height:1.3;}
-.qr{width:240px;height:240px;margin:16px auto;}
-ol{margin:0;padding-left:1.1em;text-align:left;font-size:1.1em;line-height:1.6;}
-footer{margin-top:16px;font-size:.9em;}
+body{margin:0;font-family:sans-serif;display:flex;justify-content:center;align-items:center;height:100vh}
+.card{border:6px solid #00A0E9;padding:20px;text-align:center}
+h1{background:#00A0E9;color:#fff;margin:0 0 12px;padding:6px;font-size:1.8em}
+h2{margin:8px 0;font-size:1.2em}
+ol{margin:0;padding-left:18px;text-align:left;font-size:1em}
 </style>
-</head>
 <body>
-<div class="card">
-  <h1>西川チェーン<br>飯田ふとん店</h1>
-  <img src="qr_google_map.png" class="qr" alt="店舗口コミ用QRコード">
-  <h2>今すぐ口コミを書いて<br><strong>当日5%OFF!</strong></h2>
-  <ol>
-    <li>QRを読み取り Googleでレビュー投稿</li>
-    <li>投稿画面をレジで提示</li>
-    <li>その場で<strong>5%割引</strong></li>
-  </ol>
-  <footer>※クーポンはお買上当日のみ有効です</footer>
+<div class=card>
+<h1>西川チェーン<br>飯田ふとん店</h1>
+<img src="https://chart.googleapis.com/chart?chs=240x240&cht=qr&chl=https%3A%2F%2Fmaps.app.goo.gl%2FetmAzxdmmcTBYzkA8%3Fg_st%3Dipc" width=240 height=240 alt="QR">
+<h2>口コミ投稿で当日<strong>5%OFF!</strong></h2>
+<ol>
+<li>QR読み込みレビュー投稿
+<li>投稿画面をレジ提示
+<li>その場で割引
+</ol>
+<p style="font-size:.8em">※クーポンは当日限り有効</p>
 </div>
-</body>
-</html>
+</body></html>
